        `--enable-libf2c-convenience' to configure in order to
        avoid using any installed versions. This is useful when
        compiling things for a target installation which is lacking
        those or where those libraries do not work (e.g. Fedora Core
        3). Moreover libg2c is now also accepted by configure.

        We now also have a 'globes-config' script which takes a few
        options and allows to extract e.g the linker flags.

        The test for GSL is now performed with AM_GSL_PATH which
        allows the user to (optionally) specifiy the path to
        libgsl. This is especially useful if o ne tries to install
        globes in presence of a uncooperative sysadmin.

	<-SNIP->	

	Fixed the include files for GSL, thus using
	'--with-gsl-prefix' now should work seemlessly. Removed the
	'-static' flag from the linker o ptions for lapack and
	libf2c. This may slow down compilation but ensures a prop er
        build on some 64bit platforms. GLoBES should now also build
        and work on 64bit platforms. There were basically three
        problems: old version of autotools, the length of integers as
        used by libf2c and C and some problem with a relocation,
        which seems to happen on platforms supporting both 32 and
        64bit applications.

	<-END-QUOTE->	

	Also from the NEWS file of 2.0.11

	<-BEGIN-QUOTE->	

	Added libgnu support to have fallbacks for argp and obstacks,
	since they seem not to work properly on Mac OS. argp.m4
	changed such that argp is only taken from gnulib when absent
        on the system.

	<-END-QUOTE->
	
	I tried to solve the problem with multiple definitions (they
	were the main cause for GLoBES not building on Mac). There I
	run into a new problem with SWIG. Somehow SWIG needs to have
	glb_exp glb_experiment_list to be specifically defined, which
	really looks strange to me. I hope I didn't create any bigger
	problems. But Perl support anyway is optional.

	BUGS #5-#9 are fixed.