@@ -1,0 +1,3 @@
+27/07/05 - PH
+	* Fix BUGS #10-#12
+	* Documentation of Walter's code
